# stock-backtester-backend

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: mod.rs  prices.rs
src/models/: mod.rs  prices.rs
src/routes/: mod.rs  prices.rs
src/services/: mod.rs  prices.rs
src/utils/: cors.rs
