[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"  # Latest at time of writing
actix-rt = "2.9.0"   # Add runtime dependency
polars = "0.46.0"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
yahoo_finance_api = "2.4.0"
tokio-test = "0.4.4"
chrono = "0.4.39"
actix-cors = "0.7.0"
sqlx = { version="0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
anyhow = "1.0.95"
